added names to fields

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   <section id="contact">
     <h3>Contact Me</h3>
     <form action="https://send.pageclip.co/zPRGWl5BI1JJ73C5XxQ6miVxgjRyB2T5/contact-form" class="pageclip-form" method="post">
-      <input id="name" type="text" placeholder="Your Name" required>
-      <input id="email" type="email" placeholder="Your Email" required>
-      <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
+      <input id="name" name="name" type="text" placeholder="Your Name" required>
+      <input id="email" name="email" type="email" placeholder="Your Email" required>
+      <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit" class="pageclip-form__submit">
-        <span>Send</span>
+        <span>Send Message</span>
       </button>
     </form>
   </section>
