added some visual states to pageclip

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SSSpencer413</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
   <link href="./styles.css" rel="stylesheet">
+  <link href="./pageclip-custom.css" rel="stylesheet">
 </head>
 
 <body>
