added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Meta Tags -->
   <title>SSSpencer413</title>
+  <meta name="title" content="SSSpencer413" />
+  <meta name="description" content="Welcome to SSSpencer413's official homepage!" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://spencers.work/" />
+  <meta property="og:title" content="SSSpencer413" />
+  <meta property="og:description" content="Welcome to SSSpencer413's official homepage!" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://spencers.work/" />
+  <meta property="twitter:title" content="SSSpencer413" />
+  <meta property="twitter:description" content="Welcome to SSSpencer413's official homepage!" />
+
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
   <link href="./styles.css" rel="stylesheet">
