--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section id="hero">
     <canvas id="particle-canvas"></canvas>
     <div id="hero-content">
-      <img src="https://img.spencers.work/u/ProfilePicture.gif" alt="Profile Picture">
+      <img src="https://img.spencers.work/u/ProfilePicture.webp" alt="Profile Picture">
       <h2>Hi, I'm Spencer</h2>
       <p>I make games, apps, and tools through code!</p>
     </div>
@@ -58,7 +58,7 @@
 
   <section id="projects">
     <a href="https://ssspencer413.github.io/turtlebot/" target="_blank" class="project-card">
-      <img src="https://img.spencers.work/u/9a6a77ee-a321-42b4-a1ba-63d5ed2890d4.png" alt="TurtleBot">
+      <img src="https://img.spencers.work/u/1540f30c-04ef-4840-82c9-bf70a272fed1.webp" alt="TurtleBot">
       <div class="project-info">
         <h4>TurtleBot</h4>
         <p>A fun Discord and Guilded bot all about turtles! Users can request images, jokes, and facts about turtles! Built with NodeJS.</p>
