--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <img src="https://img.spencers.work/u/1540f30c-04ef-4840-82c9-bf70a272fed1.webp" alt="TurtleBot">
       <div class="project-info">
         <h4>TurtleBot</h4>
-        <p>A fun Discord and Guilded bot all about turtles! Users can request images, jokes, and facts about turtles! Built with NodeJS.</p>
+        <p>A fun Discord bot all about turtles! Users can request images, jokes, and facts about turtles! Built with NodeJS.</p>
       </div>
     </a>
     <a href="https://www.roblox.com/games/11229338319" target="_blank" class="project-card">
@@ -126,3 +126,4 @@
 
 
 </html>
+
